start adding tests
Just a stub for now.

Signed-off-by: Aram Hăvărneanu <aram@mgk.ro>